# API312

./: .gitignore  2520_netlist.txt  CMakeLists.txt  README.md  ac_analysis.h  api_2520_builder.h  audit_2520  audit_2520.cpp  benchmark.cpp  bjt_ebers_moll.h  capacitor_trap.h  circuit.h  connectivity_audit.h  current_source.h  diode_shockley_nr.h  elements.h  gaussian_solver.h  improvements_proposed.h  inductor.h  linear_solver.h  linear_system.h  main.cpp  mna_tests_2520  mna_types.h  parameter_smoother.h  plausibility.h  resistor.h  run_diagnostics  simulation_output.txt  spice_models_2520.h  stamping.h  sweep_supplies.cpp  test_2520.cpp  test_bjt_extended.cpp  test_bjt_mna  test_bjt_mna.cpp  test_circuit.cpp  test_diagnostics  test_diagnostics.cpp  test_golden.cpp  (+10 more)
.github/workflows/: ci.yml
audit_2520.dSYM/Contents/: Info.plist
audit_2520.dSYM/Contents/Resources/DWARF/: audit_2520
audit_2520.dSYM/Contents/Resources/Relocations/aarch64/: audit_2520.yml
components/: bjt_ebers_moll.h  bjt_params.h  capacitor_trap.h  current_source.h  diode_shockley_nr.h  inductor.h  resistor.h  transformer_nonideal.h  voltage_source.h  vsource_sine.h
core/: circuit.h  elements.h  gaussian_solver.h  linear_solver.h  linear_system.h  mna_types.h
diagnostics/: ac_analysis.h  audit_2520.cpp  connectivity_audit.h  diagnose_polarity.cpp  dump_nodes.cpp  improvements_proposed.h  parameter_smoother.h  plausibility.h  validation.h
models/: api_2520_builder.h  api_2520_continuation.h  api_2520_homotopy.h  api_2520_homotopy_v2.h  spice_models_2520.h
test_bjt_mna.dSYM/Contents/: Info.plist
test_bjt_mna.dSYM/Contents/Resources/DWARF/: test_bjt_mna
test_bjt_mna.dSYM/Contents/Resources/Relocations/aarch64/: test_bjt_mna.yml
test_diagnostics.dSYM/Contents/: Info.plist
test_diagnostics.dSYM/Contents/Resources/DWARF/: test_diagnostics
test_diagnostics.dSYM/Contents/Resources/Relocations/aarch64/: test_diagnostics.yml
test_minimal_bjt.dSYM/Contents/: Info.plist
test_minimal_bjt.dSYM/Contents/Resources/DWARF/: test_minimal_bjt
test_minimal_bjt.dSYM/Contents/Resources/Relocations/aarch64/: test_minimal_bjt.yml
test_vsource_mna.dSYM/Contents/: Info.plist
test_vsource_mna.dSYM/Contents/Resources/DWARF/: test_vsource_mna
test_vsource_mna.dSYM/Contents/Resources/Relocations/aarch64/: test_vsource_mna.yml
tests/: analyze_polarity.cpp  audit_vas_block.cpp  benchmark.cpp  dc_connectivity_audit.cpp  debug_feedback_bias.cpp  diagnose_inm_6v.cpp  diagnose_vas_54v.cpp  kcl_audit_nC2.cpp  kcl_audit_vas.cpp  mna_constraint_audit.cpp  sweep_supplies.cpp  test_2520.cpp  test_2520_continuation.cpp  test_2520_hierarchical.cpp  test_2520_homotopy2d.cpp  test_2520_homotopy_v2.cpp  test_2520_patron_fix.cpp  test_2520_stabilized.cpp  test_bjt_extended.cpp  test_bjt_mna.cpp  test_blocks.cpp  test_circuit.cpp  test_components_sanity.cpp  test_conventions.cpp  test_diagnostics.cpp  test_golden.cpp  test_minimal_bjt.cpp  test_parasitic_scale.cpp  test_pnp_diode.cpp  test_pnp_unit.cpp  test_vas_bias_chain.cpp  test_vas_with_bias.cpp  test_vsource_mna.cpp
tools/: mc.py
